# fsutils

./: TODO.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: dir_bench.py
fsutils/: DirNode.c  DirNode.py  DirNode.pyx  Exceptions.c  ExifData.py  FFProbe.c  FFProbe.py  FFProbe.pyx  FileSystem.py  GenericFile.c  GenericFile.py  GenericFile.pyx  GitObject.c  GitObject.py  GitObject.pyx  ImageFile.c  ImageFile.py  ImageFile.pyx  LogFile.c  LogFile.py  LogFile.pyx  Other.c  ScriptFile.py  VideoFile.c  VideoFile.py  VideoFile.pyx  _DirNode.pyx  __init__.c  __init__.py  __init__.pyx  __main__.c  __main__.py  __main__.pyx  _serialize.py  decorators.py  exceptions.py  ffprobe.py  mimecfg.c  mimecfg.py  serialize.c  (+7 more)
fsutils/.old/: GenericFile.py
fsutils/LogFile/: Log.py  Presets.py
fsutils/audio/: Audio.py
fsutils/compiled/: _DirNode.pyx  _GenericFile.pyx  __init__.py
fsutils/dev/: _FFProbe.pyx  _FFprobe.pxd
fsutils/dir/: DirNode.pxd  DirNode.pyi  DirNode.pyx  __init__.py  __init__.pyx  __main__.py  hash.c
fsutils/file/: GenericFile.pxd  GenericFile.pyi  GenericFile.pyx  __init__.pxd  __init__.py  hash.c
fsutils/git/: GitObject.py  __init__.py
fsutils/img/: ImageFile.py  __init__.py  __main__.py
fsutils/log/: LogFile.py  __init__.py
fsutils/tools/: __init__.py
fsutils/utils/: Exceptions.py  __init__.py  decorators.py  mimecfg.py  tools.py
fsutils/video/: FFProbe.py  FFProbe.pyi  VideoFile.py  __init__.py  __main__.py
