[project]
name = "fsutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alabaster==0.7.16 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "anyio==4.4.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "babel==2.16.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "certifi==2024.8.30 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "chardet==5.2.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "charset-normalizer==3.3.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "colorama==0.4.6 ; (python_full_version >= '3.12' and python_full_version < '4.0' and sys_platform == 'win32') or (python_full_version >= '3.12' and python_full_version < '4.0' and platform_system == 'Windows')",
    "docutils==0.21.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "exifread==3.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "filelock==3.16.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "fsspec==2024.9.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "h11==0.14.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "httpcore==1.0.5 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "httpx==0.27.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "idna==3.10 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "imagehash==4.3.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "imagesize==1.4.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "iniconfig==2.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "jinja2==3.1.4 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "joblib==1.4.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "markupsafe==2.1.5 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "mpmath==1.3.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "mypy>=1.11.2",
    "mypy-extensions==1.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "mypy==1.11.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "networkx==3.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "numpy==1.26.4 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "nvidia-cublas-cu12==12.1.3.1 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-cuda-cupti-cu12==12.1.105 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-cuda-nvrtc-cu12==12.1.105 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-cuda-runtime-cu12==12.1.105 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-cufft-cu12==11.0.2.54 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-curand-cu12==10.3.2.106 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-cusolver-cu12==11.4.5.107 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-cusparse-cu12==12.1.0.106 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-nccl-cu12==2.20.5 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-nvjitlink-cu12==12.6.68 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "nvidia-nvtx-cu12==12.1.105 ; python_full_version >= '3.12' and python_full_version < '4.0' and platform_machine == 'x86_64' and platform_system == 'Linux'",
    "ollama==0.2.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "opencv-python==4.10.0.84 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "packaging==24.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pandas==2.2.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pillow==10.4.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pip==24.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pluggy==1.5.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pygments==2.18.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pytest==8.3.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pytz==2024.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pywavelets==1.7.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "pyyaml==6.0.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "regex==2024.9.11 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "requests==2.32.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "rich>=13.8.1",
    "ruff>=0.5.7",
    "ruff==0.5.7 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "safetensors==0.4.5 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "scipy==1.14.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "setuptools==75.1.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "six==1.16.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sniffio==1.3.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "snowballstemmer==2.2.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sphinx>=7.4.7",
    "sphinx==7.4.7 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sphinxcontrib-applehelp==2.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sphinxcontrib-devhelp==2.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sphinxcontrib-htmlhelp==2.1.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sphinxcontrib-jsmath==1.0.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sphinxcontrib-qthelp==2.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "sphinxcontrib-serializinghtml==2.0.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "threadpoolctl==3.5.0 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "tzdata==2024.1 ; python_full_version >= '3.12' and python_full_version < '4.0'",
    "urllib3==2.2.3 ; python_full_version >= '3.12' and python_full_version < '4.0'",
]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.9.2",
]
