[project]
name = "fsutils"
version = "0.1.0"
description = "High level file system utilities"
readme = "README.md"
authors = [
    { name = "jMujunen", email = "jMujunen@github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "imagehash>=4.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
]

[project.scripts]
fsutils-dir = "fsutils.dir.__main__:main"
fsutils-dir-serialize = "fsutils.dir.__main__:serialize"



[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["*"]


