[project]
name = "fsutils"
version = "0.1.0"
description = "High level file system utilities"
readme = "README.md"
authors = [
    { name = "jMujunen", email = "jMujunen@github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "cython>=3.0.12",
    "imagehash>=4.3.2",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "rawpy>=0.24.0",
    "seaborn>=0.13.2",
    "setuptools>=79.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
fsutils-dir = "fsutils.dir.__main__:main"
fsutils-dir-serialize = "fsutils.dir.__main__:serialize"
fsutils-video = "fsutils.video.__main__:main"



[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["*"]


